CYBSEC-1300 Added external dataset sample
