# external_server/models/__init__.py
@@ -4,6 +4,9 @@
 from __future__ import absolute_import
 
 # import models into model package
+from external_server.models.dataset_item import DatasetItem
+from external_server.models.dataset_structure import DatasetStructure
+from external_server.models.dataset_structure_features_inner import DatasetStructureFeaturesInner
 from external_server.models.model_structure import ModelStructure
 from external_server.models.model_structure_inputs_inner import ModelStructureInputsInner
 from external_server.models.predict_request import PredictRequest
