# external_server/models/dataset_item.py
@@ -1,0 +1,60 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from external_server.models.base_model_ import Model
+from external_server import util
+
+
+class DatasetItem(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, features=None):  # noqa: E501
+        """DatasetItem - a model defined in OpenAPI
+
+        :param features: The features of this DatasetItem.  # noqa: E501
+        :type features: Dict[str, str]
+        """
+        self.openapi_types = {"features": Dict[str, str]}
+
+        self.attribute_map = {"features": "features"}
+
+        self._features = features
+
+    @classmethod
+    def from_dict(cls, dikt) -> "DatasetItem":
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The DatasetItem of this DatasetItem.  # noqa: E501
+        :rtype: DatasetItem
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def features(self):
+        """Gets the features of this DatasetItem.
+
+
+        :return: The features of this DatasetItem.
+        :rtype: Dict[str, str]
+        """
+        return self._features
+
+    @features.setter
+    def features(self, features):
+        """Sets the features of this DatasetItem.
+
+
+        :param features: The features of this DatasetItem.
+        :type features: Dict[str, str]
+        """
+
+        self._features = features
