# external_server/models/dataset_structure_features_inner.py
@@ -1,0 +1,108 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from external_server.models.base_model_ import Model
+from external_server import util
+
+
+class DatasetStructureFeaturesInner(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, name=None, shape=None, type=None):  # noqa: E501
+        """DatasetStructureFeaturesInner - a model defined in OpenAPI
+
+        :param name: The name of this DatasetStructureFeaturesInner.  # noqa: E501
+        :type name: str
+        :param shape: The shape of this DatasetStructureFeaturesInner.  # noqa: E501
+        :type shape: List[str]
+        :param type: The type of this DatasetStructureFeaturesInner.  # noqa: E501
+        :type type: str
+        """
+        self.openapi_types = {"name": str, "shape": List[str], "type": str}
+
+        self.attribute_map = {"name": "name", "shape": "shape", "type": "type"}
+
+        self._name = name
+        self._shape = shape
+        self._type = type
+
+    @classmethod
+    def from_dict(cls, dikt) -> "DatasetStructureFeaturesInner":
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The DatasetStructure_features_inner of this DatasetStructureFeaturesInner.  # noqa: E501
+        :rtype: DatasetStructureFeaturesInner
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def name(self):
+        """Gets the name of this DatasetStructureFeaturesInner.
+
+
+        :return: The name of this DatasetStructureFeaturesInner.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name):
+        """Sets the name of this DatasetStructureFeaturesInner.
+
+
+        :param name: The name of this DatasetStructureFeaturesInner.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def shape(self):
+        """Gets the shape of this DatasetStructureFeaturesInner.
+
+
+        :return: The shape of this DatasetStructureFeaturesInner.
+        :rtype: List[str]
+        """
+        return self._shape
+
+    @shape.setter
+    def shape(self, shape):
+        """Sets the shape of this DatasetStructureFeaturesInner.
+
+
+        :param shape: The shape of this DatasetStructureFeaturesInner.
+        :type shape: List[str]
+        """
+
+        self._shape = shape
+
+    @property
+    def type(self):
+        """Gets the type of this DatasetStructureFeaturesInner.
+
+
+        :return: The type of this DatasetStructureFeaturesInner.
+        :rtype: str
+        """
+        return self._type
+
+    @type.setter
+    def type(self, type):
+        """Sets the type of this DatasetStructureFeaturesInner.
+
+
+        :param type: The type of this DatasetStructureFeaturesInner.
+        :type type: str
+        """
+
+        self._type = type
